Mudando nome e icones do app

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Heuristic Auditor</title>
+  <title>HeuriLens</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -29,7 +29,7 @@
         </svg>
       </div>
       <div>
-        <h1 class="header-title">Heuristic Auditor</h1>
+        <h1 class="header-title">HeuriLens</h1>
         <p class="header-subtitle">WCAG 2.1 + Nielsen</p>
       </div>
     </div>
