Filtrando problemas por severidade

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -258,6 +258,32 @@
           </div>
         </div>
 
+        <!-- Métricas da Auditoria -->
+        <div class="legend-section">
+          <h3 class="legend-section-title">Métricas da Auditoria</h3>
+          <div class="legend-item">
+            <span class="legend-dot" style="background:transparent;border:1px solid rgba(255,255,255,0.2);"></span>
+            <div>
+              <strong>Instâncias</strong>
+              <p>Total de elementos com problemas. Difere dos cards (que contam tipos de regras).</p>
+            </div>
+          </div>
+          <div class="legend-item">
+            <span class="legend-dot" style="background:transparent;border:1px solid rgba(255,255,255,0.2);"></span>
+            <div>
+              <strong>Aprovados</strong>
+              <p>Regras testadas que passaram sem erros nesta página.</p>
+            </div>
+          </div>
+          <div class="legend-item">
+            <span class="legend-dot" style="background:transparent;border:1px solid rgba(255,255,255,0.2);"></span>
+            <div>
+              <strong>N/A (Não Aplicável)</strong>
+              <p>Regras ignoradas por não existirem elementos correspondentes na página.</p>
+            </div>
+          </div>
+        </div>
+
         <!-- Ícones de Problema -->
         <div class="legend-section">
           <h3 class="legend-section-title">Ícones por Tipo de Problema</h3>
